--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "sync:android": "npm run build && npx cap sync android"
   },
   "dependencies": {
+    "@capacitor-community/http": "^1.4.1",
     "@capacitor/android": "^7.4.3",
+    "@capacitor/app": "^7.1.0",
     "@capacitor/core": "^7.4.3",
     "@capacitor/geolocation": "^7.1.5",
     "axios": "^1.13.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-kakao-maps-sdk": "^1.2.0",
     "react-router-dom": "^7.9.5"
   },
   "devDependencies": {
